--- a/Module 4/Web_Scraping_Essentials_Kyaw.ipynb
+++ b/Module 4/Web_Scraping_Essentials_Kyaw.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "401a9bc4",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "173e32ce",
    "metadata": {},
    "outputs": [],
@@ -33,13 +33,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "208c8dd4",
+   "execution_count": 10,
+   "id": "77c431ca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# using sleep method to wait for the site to fully load\n",
-    "sleep(10)\n",
+    "# wait for the site to fully load\n",
+    "driver.implicitly_wait(10)\n",
     "\n",
     "#getting the page_source\n",
     "page = driver.page_source"
@@ -47,8 +47,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "7c75a11e",
+   "execution_count": 11,
+   "id": "7c6217d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,15 +61,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "4fcb2714",
+   "execution_count": 12,
+   "id": "f43e7f3b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "writing / editing\n",
       "CSV file generated successfully.\n"
      ]
     }
@@ -98,8 +97,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "26d1b1cb",
+   "execution_count": 13,
+   "id": "23d492ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdea15d7",
+   "id": "72f9f7f2",
    "metadata": {},
    "outputs": [],
    "source": []
